fix: Broken styles in the latest snappymail release

--- a/integrations/nextcloud/snappymail/app/themes/Nextcloud25/styles.css
+++ b/integrations/nextcloud/snappymail/app/themes/Nextcloud25/styles.css
@@ -258,8 +258,13 @@ html.rl-left-panel-disabled #rl-app #rl-left {
 }
 
 #rl-app #V-SettingsMenu .b-footer,
-#rl-app .b-footer.btn-toolbar .btn-group {
+#rl-app .b-footer.btn-toolbar {
+    overflow: unset;
     padding: 3px;
+}
+
+#rl-app .b-footer .btn[data-bind*="toggleLeftPanel"] {
+    width: unset !important;
 }
 
 /*
@@ -560,6 +565,7 @@ select option {
 #rl-app .e-component.e-checkbox.material-design:hover,
 #rl-app .e-component.e-checkbox.material-design:focus-within {
     background-color: var(--color-primary-light);
+    outline: none;
 }
 
 #rl-app .e-component.e-checkbox.material-design:focus {
@@ -567,30 +573,22 @@ select option {
 }
 
 #rl-app .e-checkbox.material-design>div {
-    box-sizing: border-box;
-    margin-right: 4px;
-    margin-left: -2px;
-}
-
-#rl-app .e-checkbox.material-design>div>div {
-    width: 100%;
-    height: 100%;
+    position: unset;
+    width: 18px;
+    height: 18px;
     border: 2px solid var(--color-primary-element);
     border-radius: 2px;
     animation: none;
     box-sizing: border-box;
 }
 
-#rl-app .e-checkbox.material-design>div>div.checked {
-    top: 0;
-    left: 0;
+#rl-app .e-checkbox.material-design input:checked+div {
     animation: none;
     --svg-checked: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='3 3 18 18'><path d='M10,17L5,12L6.41,10.58L10,14.17L17.59,6.58L19,8M19,3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3Z'></path></svg>");
     -webkit-mask-image: var(--svg-checked);
     mask-image: var(--svg-checked);
     background: var(--color-primary-element);
     border-width: 0;
-    margin: 0;
     transform: unset;
 }
 
